Closed Bug 1022741 Opened 10 years ago Closed 10 years ago

[B2G][FTU]The toggle switches do not visually update when tapped on during the First Time Experience

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla33
blocking-b2g 2.0+
Tracking Status
firefox31 --- wontfix
firefox32 --- fixed
firefox33 --- fixed
b2g-v1.4 --- unaffected
b2g-v2.0 --- verified
b2g-v2.1 --- verified

People

(Reporter: astole, Assigned: wchen)

References

()

Details

(Keywords: regression, smoketest)

Attachments

(1 file)

Tapping on the toggle switches in the FTU does not visually update. The toggle switch visually updates if it is tapped on, then the page is changed and changed back. This issue occurs with all the toggle switches during the FTU. The switches work as expected in the Settings app. Repro Steps: 1) Update a Flame to BuildID: 20140609040203 2) Proceed through the FTU 3) On the 'Cellular Data' page, tap on 'Enable Data' Actual: The toggle switches do not visually update when tapped on Expected: The toggle switches visually update when tapped on 2.0 Environmental Variables: Device: Flame 2.0 BuildID: 20140609040203 Gaia: 12af93123c5db55212d51fe235d39f21209a1eaa Gecko: 9305a8ec77fe Version: 32.0a1 Firmware Version: v10G-2 Repro frequency: (2/3, 100%, etc.) See attached: Video
This issue does not occur on the latest 1.4 on Flame. The toggle switches work as expected. 1.4 Environmental Variables: Device: Flame 1.4 BuildID: 20140609000201 Gaia: 8b239e41bbd85aa7b6a2c5d388e775ba7de6fb2b Gecko: e3f85877db29 Version: 30.0 Firmware Version: v10G-2 Adding qawanted to check the latest 2.0 on Buri.
blocking-b2g: --- → 2.0?
Keywords: qawanted
QA Contact: jmercado
Mozilla Inbound Regression Window Last working Environmental Variables: Device: Flame BuildID: 20140606214236 Gaia: 3f3963fe6e165c0a7afc6222e1137d0862c70b30 Gecko: 4f059440e912 Version: 32.0a1 First Broken Environmental Variables: Device: Flame BuildID: 20140607014435 Gaia: 3f3963fe6e165c0a7afc6222e1137d0862c70b30 Gecko: 8730ce555151 Version: 32.0a1 Last working gaia / First broken gecko - Issue occurs - Indicates a gecko issue Gaia: 3f3963fe6e165c0a7afc6222e1137d0862c70b30 Gecko: 8730ce555151 First broken gaia / Last working gecko - Does not occur Gaia: 3f3963fe6e165c0a7afc6222e1137d0862c70b30 Gecko: 4f059440e912 Mozilla Inbound Pushlog: hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=4f059440e912&tochange=8730ce555151
Broken by bug 992521.
Blocks: 992521
Component: Gaia::First Time Experience → DOM
Product: Firefox OS → Core
Version: unspecified → Trunk
William - Can you patch this quickly or backout?
Flags: needinfo?(wchen)
I'm looking into this.
blocking-b2g: 2.0? → 2.0+
This is another case where we want to use GetCrossShadowCurrentDoc() instead of CurrentDoc()
Assignee: nobody → wchen
Attachment #8437374 - Flags: review?(bugs)
Flags: needinfo?(wchen)
Comment on attachment 8437374 [details] [diff] [review] Use CrossShadowCurrentDoc() in Element::UpdateState. Yes, we need to go through all the cases when GetCurrentDoc() is used. And most of those probably need GetCrossShadowCurrentDoc()
Attachment #8437374 - Flags: review?(bugs) → review+
Flags: in-testsuite+
OS: Gonk (Firefox OS) → All
Hardware: ARM → All
Blocks: 1015975
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
This issue is verified fixed on v2.0 and v2.1. Device: Flame 2.1 BuildID: 20141021001201 Gaia: e458f5804c0851eb4e93c9eb143fe044988cecda Gecko: ee86921a986f Gonk: 05aa7b98d3f891b334031dc710d48d0d6b82ec1d Version: 34.0 (2.1) Firmware: V188 User Agent: Mozilla/5.0 (Mobile; rv:34.0) Gecko/34.0 Firefox/34.0 Device: Flame 2.0 BuildID: 20141021000201 Gaia: 63b56a7a7453726b9e12ad1afe02c68c83c5aeca Gecko: 40584eecdc75 Gonk: 05aa7b98d3f891b334031dc710d48d0d6b82ec1d Version: 32.0 (2.0) Firmware: V180 User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 The 'enable data' toggle switches as expected.
Status: RESOLVED → VERIFIED
QA Whiteboard: [QAnalyst-Triage?]
Flags: needinfo?(pbylenga)
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(pbylenga)
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: