Bug 1022741 - Use CrossShadowCurrentDoc() in Element::UpdateState. r=smaug, a=2.0+